Working on redis image Basket Service

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -3,9 +3,10 @@ version: '3.4'
 services:
   catalog.api:
     container_name: catalog.api
+    # Get env variables only from appsettings.Development.json
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - DatabaseSettings:ConnectionString=mongodb://catalogdb:27017
+      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
     depends_on:
       - catalogdb
     ports:
@@ -18,3 +19,12 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+  mongo-express-gui:
+    container_name: mongo-express
+    environment:
+      - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
+      - ME_CONFIG_MONGODB_SERVER=catalogdb
+    depends_on:
+      - catalogdb
+    ports:
+      - "8081:8081"  
