Working on adding redis cache repositoy impl for Cart and renamed Basket to Cart

--- a/src/Services/Cart/Cart.API/Properties/launchSettings.json
+++ b/src/Services/Cart/Cart.API/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Basket.API": {
+    "Cart.API": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
