--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,17 +1,24 @@
 version: '3.4'
 
 services:
+  catalogdb:
+    image: mongo
+  cartdb:
+    image: redis:alpine # lightweight version
+  portainer:
+    image: portainer/portainer-ce
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
-  catalogdb:
-    image: mongo
   mongo-express-gui:
     image: mongo-express
+  cart.api:
+    image: ${DOCKER_REGISTRY-}cartapi
+    build:
+      context: .
+      dockerfile: Services/Cart/Cart.API/Dockerfile
 volumes:
   mongo_data:
-    
-
-
+  portainer_data:  
