--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,24 +1,88 @@
 version: '3.4'
 
 services:
-  catalogdb:
-    image: mongo
-  cartdb:
-    image: redis:alpine # lightweight version
-  portainer:
-    image: portainer/portainer-ce
+  # CATALOG API AND DB
   catalog.api:
+    container_name: catalog.api
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
-  mongo-express-gui:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
+    depends_on:
+      - catalogdb
+    ports: 
+      - "8000:80" # 8000 on host to 80 on docker
+  catalogdb:
+    image: mongo
+  mongo-express:
     image: mongo-express
+    container_name: mongo-express
+    environment:
+      - ME_CONFIG_OPTIONS_EDITORTHEME=ambiance
+      - ME_CONFIG_MONGODB_SERVER=catalogdb
+    depends_on:
+      - catalogdb
+    ports:
+      - "8081:8081"
+
+  # CART API AND DB
   cart.api:
+    container_name: cart.api
     image: ${DOCKER_REGISTRY-}cartapi
     build:
       context: .
       dockerfile: Services/Cart/Cart.API/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "RedisCacheSettings:ConnectionString=cartdb:6379"
+    depends_on:
+      - cartdb
+    ports:
+      - "8001:80" # 8001 on host to 80 on docker
+  cartdb:
+    image: redis:alpine # lightweight version
+
+  # DISCOUNT API AND DB
+  discountdb:
+    image: postgres
+    container_name: discountdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=password123
+      - POSTGRES_DB=DiscountDB
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@aspnetrun.com
+      - PGADMIN_DEFAULT_PASSWORD=password123
+    restart: always
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/root/.pgadmin
+
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    restart: always
+    ports:
+      - "8080:8000"
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data 
+
 volumes:
   mongo_data:
-  portainer_data:  
+  portainer_data:
+  postgres_data:
+  pgadmin_data:  
