--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=DiscountDB;User Id=admin;Password=password123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
