--- a/src/Services/Cart/Cart.API/Cart.API.csproj
+++ b/src/Services/Cart/Cart.API/Cart.API.csproj
@@ -8,10 +8,17 @@
     <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.59.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="JsonConverter.Newtonsoft.Json" Version="0.4.0" />
+  </ItemGroup>
+
+
+  <!-- REFERENCE SERVER PROTO FILE IN gRPC Server (Discount)-->
+  <ItemGroup>
+    <Protobuf Include="..\..\Discount\Discount.Grpc\Protos\discount.proto" GrpcServices="Client" />  
   </ItemGroup>
 </Project>
