--- a/src/Services/Cart/Cart.API/appsettings.json
+++ b/src/Services/Cart/Cart.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:5003"
+  },
   "RedisCacheSettings": {
     "ConnectionString": "localhost:6379"
   },
