--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -38,6 +38,8 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "RedisCacheSettings:ConnectionString=cartdb:6379"
+      # Add env for gRPC Server project (Discount gRPC) for basket to connect
+      - "GrpcSettings:DiscountUrl=http://discount.grpc" # localhost:8003 
     depends_on:
       - cartdb
     ports:
@@ -82,6 +84,22 @@ services:
       - "5050:80"
     volumes:
       - pgadmin_data:/root/.pgadmin
+
+  # DISCOUNT GRPC AND DB
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    container_name: discount.grpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDB;User Id=admin;Password=password123;"
+    depends_on:
+      - discountdb # Uses same DB as Discount API
+    ports:
+      - "8003:80" # 8003 on host to 80 on docker
+        
 
   portainer:
     image: portainer/portainer-ce
